# highD-dataset

./: LICENSE  README.md
Python/: README.md  pyproject.toml
Python/src/: main.py
Python/src/data_management/: read_csv.py
Python/src/visualization/: visualize_frame.py
Python/tests/: test_read_csv.py
